# SpaceNinjaLauncher

./: .env.example  .gitignore  .prettierrc  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js.timestamp-1695384609177-6eb6d37139cc5.mjs  webpack.config.cjs
data/: inventory1.json  mods.json
public/api/: missions.json  mods.json  recipes.json  user.json  users.json
scripts/: items.js  mongodb-workaround.js  move-binary.js  move-mongo.js
src/: App.svelte  app.css  express.js  routers.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/server/: mod.rs
src-tauri/src/server/accounts/: account_controller.rs  account_model.rs  account_repo.rs  mod.rs
src-tauri/src/server/handlers/: example.rs
src-tauri/src/server/inventories/: inventory_controller.rs  inventory_model.rs  inventory_repo.rs  mod.rs
src-tauri/src/server/mods/: mod.rs  mods_controller.rs  mods_model.rs  mods_service.rs
src-tauri/src/server/static/: inventory_data.json
src-tauri/src/server/suits/: mod.rs  suit_controller.rs  suit_model.rs  suit_service.rs
src/components/: Button.svelte  Card.svelte  Input.svelte  Select.svelte
src/lib/: CatalogActions.svelte  CategoryAddPage.svelte  CategoryPage.svelte  Greet.svelte  Grid.svelte  Header.svelte  Image.svelte  ImagePlaceholder.svelte  NewSearch.svelte  PlayButton.svelte  PolarityInput.svelte  PolarityInputSlot.svelte  Search.svelte  SelectPanel.svelte  UserPanel.svelte  VirtualizedList.svelte  common.js
src/routers/: router.json
src/routers/categories/: Categories.svelte  CategoryCard.svelte  categories.json
src/routers/dashboard/: Dashboard.svelte  DashboardItem.svelte  dashboard-items.json
src/services/: user.service.js
src/store/: User.store.js
src/types/: inventory.types.js
(+26 files in other folders)
