[package]
name = "space_ninja_launcher"
version = "35.0.8"
description = "SpaceNinjaLauncher"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-all", "process-command-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.4.0"
actix-cors = "0.6.4"
dotenv = "0.15.0"
futures = "0.3.28"
chrono = "0.4.31"
discord-rich-presence = "0.2.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]
